# cxx_yadro_tape_test

./: .gitignore  CMakeLists.txt  README.md  Tape.cpp  Tape.h  TapeEmulator.cpp  TapeEmulator.h  TapeSorter.cpp  TapeSorter.h  config.ini  generator.cpp  interface.h  main.cpp  test.cpp
